frontend/test/should_pass/edge_007.grg
rule r {
	x:Node ?-e:AEdge-? y:Node;
	x ?-f:typeof(e)-? y;

	modify {
		delete(e);
	}
}
