frontend/test/should_fail/alternative_003.grg
pattern patWithAbstract
{
    a:Node ?--? b:Node;
}

rule instantiateAbstractPattern
{
    modify {
        :patWithAbstract();
    }
}
